os validator